// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="infini-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="infini-dropdown  infini-dropdown-placement-bottomRight  infini-dropdown-hidden"
  >
    <div
      class="infini-table-filter-dropdown"
    >
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="infini-table-filter-icon infini-table-filter-selected infini-dropdown-trigger"
  style=""
  title="Filter menu"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="infini-table-filter-icon infini-dropdown-trigger"
  style=""
  title="Filter menu"
>
  unfiltered
</span>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="infini-table-wrapper"
>
  <div
    class="infini-spin-nested-loading"
  >
    <div
      class="infini-spin-container"
    >
      <div
        class="infini-table infini-table-default infini-table-scroll-position-left"
      >
        <div
          class="infini-table-content"
        >
          <div
            class="infini-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
              </colgroup>
              <thead
                class="infini-table-thead"
              >
                <tr>
                  <th
                    class="infini-table-column-has-actions infini-table-column-has-filters"
                  >
                    <span
                      class="infini-table-header-column"
                    >
                      <div>
                        <span
                          class="infini-table-column-title"
                        >
                          Name
                        </span>
                        <span
                          class="infini-table-column-sorter"
                        />
                      </div>
                    </span>
                    <i
                      aria-label="icon: filter"
                      class="anticon anticon-filter infini-dropdown-trigger"
                      tabindex="-1"
                      title="Filter menu"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="filter"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                        />
                      </svg>
                    </i>
                  </th>
                </tr>
              </thead>
              <tbody
                class="infini-table-tbody"
              >
                <tr
                  class="infini-table-row infini-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="infini-table-column-has-actions infini-table-column-has-filters"
                  >
                    <span
                      class="infini-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jack
                  </td>
                </tr>
                <tr
                  class="infini-table-row infini-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="infini-table-column-has-actions infini-table-column-has-filters"
                  >
                    <span
                      class="infini-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Lucy
                  </td>
                </tr>
                <tr
                  class="infini-table-row infini-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="infini-table-column-has-actions infini-table-column-has-filters"
                  >
                    <span
                      class="infini-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Tom
                  </td>
                </tr>
                <tr
                  class="infini-table-row infini-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="infini-table-column-has-actions infini-table-column-has-filters"
                  >
                    <span
                      class="infini-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div
    class="infini-dropdown  infini-dropdown-placement-bottomRight  infini-dropdown-hidden"
  >
    <div
      class="infini-table-filter-dropdown"
    >
      <ul
        class="infini-dropdown-menu  infini-dropdown-menu-root infini-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="infini-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="infini-checkbox-wrapper"
          >
            <span
              class="infini-checkbox"
            >
              <input
                class="infini-checkbox-input"
                type="checkbox"
              />
              <span
                class="infini-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="infini-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="infini-checkbox-wrapper"
          >
            <span
              class="infini-checkbox"
            >
              <input
                class="infini-checkbox-input"
                type="checkbox"
              />
              <span
                class="infini-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="infini-dropdown-menu-submenu infini-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="infini-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="infini-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="infini-table-filter-dropdown-btns"
      >
        <a
          class="infini-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="infini-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div
    class="infini-dropdown  infini-dropdown-placement-bottomRight  infini-dropdown-hidden"
  >
    <div
      class="infini-table-filter-dropdown"
    >
      <ul
        class="infini-dropdown-menu  infini-dropdown-menu-root infini-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          class="infini-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="infini-radio-wrapper"
          >
            <span
              class="infini-radio"
            >
              <input
                class="infini-radio-input"
                type="radio"
              />
              <span
                class="infini-radio-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          class="infini-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="infini-radio-wrapper"
          >
            <span
              class="infini-radio"
            >
              <input
                class="infini-radio-input"
                type="radio"
              />
              <span
                class="infini-radio-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="infini-dropdown-menu-submenu infini-dropdown-menu-submenu-vertical"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="infini-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="infini-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="infini-table-filter-dropdown-btns"
      >
        <a
          class="infini-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="infini-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;
